[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
    actix-web = "3.3.2"
    actix-rt = "1.1.1"
    serde = { version = "1.0.123", features = ["derive"] }
config = "0.11.0"
deadpool-postgres = "0.10.1"
dotenv = "0.15.0"
futures = "0.3.17"
slog = "2.7.0"
slog-async = "2.7.0"
slog-envlogger = "2.2.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.5"
